--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="background: url('assets/Bck.jpg') center center / cover no-repeat fixed;">
   <app-root></app-root>
 </body>
 </html>
+
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const faders = document.querySelectorAll('.fade-in');
+    const options = {
+      threshold: 0.1,
+      rootMargin: '0px 0px -100px 0px'
+    };
+    const appearOnScroll = new IntersectionObserver(function (entries, observer) {
+      entries.forEach(entry => {
+        if (!entry.isIntersecting) return;
+        entry.target.classList.add('visible');
+        observer.unobserve(entry.target);
+      });
+    }, options);
+
+    faders.forEach(fader => {
+      appearOnScroll.observe(fader);
+    });
+  });
+</script>
